# crewai-vercel-app

./: .gitignore  DEPLOYMENT_GUIDE.md  FREE_DEPLOYMENT_OPTIONS.md  render.yaml  vercel.json
my_crewai_project/: Dockerfile  api_wrapper.py  flask_api.py  main.py  pyproject.toml  requirements.txt  simple_crew.py
prototype/: next.config.mjs  package.json
prototype/api/crew/: route.ts
prototype/app/: page.tsx
prototype/components/: agent-card.tsx  crew-trigger.tsx  mcp-server-manager.tsx  results-visualization.tsx  task-creator.tsx  task-monitor.tsx
prototype/components/ui/: alert-dialog.tsx  calendar.tsx  carousel.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  sidebar.tsx  slider.tsx  switch.tsx  toast.tsx  toggle-group.tsx  toggle.tsx
